# aoc

./: .gitignore  .replit  Cargo.toml  LICENSE  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
2019/: Cargo.toml  README.md
2020/: Cargo.toml  README.md
2021/: Cargo.toml
2021/day01/: README.md
2021/day01/src/: main.rs
2021/day02/: README.md
2021/day02/src/: main.rs
2021/day03/: README.md
2021/day03/src/: main.rs
2021/day04/: README.md
2021/day04/src/: board.rs  main.rs
2021/day05/: README.md
2021/day05/src/: main.rs
2021/day06/: README.md
2021/day06/src/: main.rs
2021/day07/: README.md
2021/day07/src/: main.rs
2021/day08/: README.md  temp.txt
2021/day08/src/: main.rs
2021/day09/: README.md
2021/day09/src/: main.rs
2021/day10/: README.md
2021/day10/src/: main.rs
2021/day11/src/: main.rs
2021/src/: main.rs
2022/: Cargo.toml
aho_corasick/: all.html  enum.ErrorKind.html  enum.MatchKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Match.html  struct.StreamFindIter.html  trait.StateID.html
aoc/: all.html  fn.main.html  index.html
aoc_2020/: all.html  fn.main.html  index.html
day01/: README.md  all.html  fn.assert_indices_havent_crossed.html  fn.main.html  fn.part1.html  fn.part2.html  index.html  sidebar-items.js
day02/: README.md  all.html  fn.handle_row_p1.html  fn.handle_row_p2.html  fn.main.html  fn.parse_input_row.html  fn.parse_policy.html  fn.password_is_valid_p1.html  (+3 more)
(+1786 files in other folders)
